--- a/CSS/style.css
+++ b/CSS/style.css
@@ -15,8 +15,8 @@
     position: absolute;
     bottom:0;
     margin:0;
-    height: 50px;;
-    /* width:90%; */
+    height: 50px;
+    top:70%;
 }
 
 .sBody{
@@ -32,9 +32,4 @@
 
 .sNav{
     background-color: white;
-}
-
-.sFooter{
-    background-color: grey;
-    border-top: darkcyan 3px;
 }
