--- a/CSS/style.css
+++ b/CSS/style.css
@@ -15,8 +15,8 @@
     position: absolute;
     bottom:0;
     margin:0;
-    height: 50px;
-    top:70%;
+    height: 30%;
+    top:65%; 
 }
 
 .sBody{
